# hotpaxel

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  GUIDELINES.md  README.md  build-all.sh  build.sh  build_paxel.ts  docker-compose.yml  package.json  roadmap.md  turbo.json
.docker/: hotpaxel.Dockerfile  paxel.Dockerfile  tiptex-web.Dockerfile
.github/: release.yml
.github/workflows/: ci.yml  cleanup.yml  docker-publish.yml  release.yml
apps/paxel/: .gitignore  Dockerfile  tsconfig.json
apps/paxel/src/: asset-manager.ts  compiler.ts  config.ts  index.ts  queue.ts
apps/paxel/test/: assets.test.ts
apps/tiptex-web/: App.tsx  Dockerfile  README.md  build.sh  hot-stubs.d.ts  index.css  index.html  metadata.json  nginx.conf  package.json  types.ts
apps/tiptex-web/components/: Editor.tsx  PdfPreview.tsx  StatusPanel.tsx  Toolbar.tsx
apps/tiptex-web/components/extensions/: ProtectedToken.tsx
apps/tiptex-web/services/: hotSdk.ts  paxelServer.ts
crates/hot/: Cargo.toml  README.md  package.json
crates/hot/src/: lib.rs
crates/paxel/: Cargo.toml  Dockerfile  README.md  build.sh  package.json
crates/paxel/src/: main.rs  models.rs
crates/paxel/src/handlers/: compiler.rs  fonts.rs  mod.rs
docs/: ARCHITECTURE.md  DECISIONS.md  ENGINEERING_GUIDE.md  PLAN.md  UI_CONTRACT.md
services/paxel/: Dockerfile  package.json
services/paxel/src/: asset-manager.ts  compiler.ts  config.ts  index.ts
services/paxel/src/storage/: adapter.ts
services/paxel/test/: api.test.ts
tests/fixtures/: korean_test.tex  test_font.tex
