[workspace]
resolver = "2"
members = [
    "crates/hot",
    "crates/paxel",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tracing = "0.1"
# common internal dependencies can be added here once we extract shared logic
