[workspace]
resolver = "2"
members = [
    "crates/hot",
    "crates/paxel",
]

[workspace.package]
version = "0.2.0-alpha.6"
authors = ["Minchul Kwon <mstorm@mstorm.net>"]
repository = "https://github.com/hotpaxel/hotpaxel"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tracing = "0.1"
# common internal dependencies can be added here once we extract shared logic
