[package]
name = "hot"
version = "0.2.0-alpha.2"
edition = "2021"
description = "High-Performance HTML ↔ TeX Converter"
repository = "https://github.com/hotpaxel/hotpaxel"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
unicode-segmentation = "1.10"
html-escape = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
