[package]
name = "hot"
version.workspace = true
edition.workspace = true
description = "High-Performance HTML ↔ TeX Converter"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
unicode-segmentation = "1.10"
html-escape = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
