[package]
name = "paxel"
version = "0.2.0-alpha.2"
edition = "2021"
description = "Stateless XeLaTeX Rendering Engine"
repository = "https://github.com/hotpaxel/hotpaxel"
license-file = "../../LICENSE"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
futures-util = "0.3"
walkdir = "2.4"
http = "1.0"
