[package]
name = "paxel"
version.workspace = true
edition.workspace = true
description = "Stateless XeLaTeX Rendering Engine"
repository.workspace = true
license-file = "../../LICENSE"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
futures-util = "0.3"
walkdir = "2.4"
http = "1.0"
